# calendarize

./: Cargo.toml  README.md
.github/workflows/: deploy.yml  publish.yml
src/: calendarize.rs  calendrize.rs  lib.rs
