[package]
name = "calendarize"
version = "0.0.2"
authors = ["sadness_ojisan <sadness.ojisan@gmail.com>"]
edition = "2018"
description = "calendarize month"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
