[package]
name = "calendarize"
version = "1.1.0"
authors = ["sadnessOjisan <sadness.ojisan@gmail.com>"]
edition = "2018"
description = "calendarize a month"
license = "MIT"
repository = "https://github.com/sadnessOjisan/calendarize"
readme = "README.md"
keywords = ["date","calendar"]
categories = ["date-and-time"]

[dependencies]
chrono = "0.4.19"